# Finly

backend/: Cargo.toml  finly.db
backend/DB/: DDL.sql  Insert_Accountings.sql  Insert_Budgets.sql
backend/frontend/src/types/: accountings.ts
backend/src/: main.rs
backend/src/controllers/: accounting.rs
backend/src/models/: accounting.rs
frontend/src/: App.css  App.tsx
frontend/src/types/: accountings.ts
